Cancelar Evento terminado

--- a/WebApplication4/WebApplication4/Views/Evento/Cancelar.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Cancelar.cshtml
@@ -13,13 +13,13 @@
     </div>
 </div>
 
-@using (Html.BeginForm("CancelarEvento", "Evento", FormMethod.Post))
+@using (Html.BeginForm("CancelarEvento", "Evento", FormMethod.Post, new { id="CancelForm"}))
 {
     <div class="container">
         <div class="row form-group">
             <!--label for="codigo" class="control-label col-md-4">ID Evento:</!label-->
-            <div class="col-md-8 hidden" >
-                @Html.TextBoxFor(c => c.idEvento, new { @class = "form-control", type = "text", @readonly="readonly"})
+            <div class="col-md-8 hidden">
+                @Html.TextBoxFor(c => c.idEvento, new { @class = "form-control", type = "text", @readonly = "readonly" })
             </div>
             <label for="nombreEvento" class="control-label col-md-2">Nombre Evento:</label>
             <div class="col-md-4">
@@ -31,68 +31,75 @@
             </div>
         </div>
 
-        <div class="row form-group">
-            <label for="fecha" class="control-label col-md-3 col-md-offset-3">Fecha - hora:</label>
-            <div class="col-md-3 ">
-                <div id="fechaHora" style="border-radius:10px ;border:1px solid #ccc; height: 80px; overflow-y: scroll; padding:0px 10px ">
-                    @for (int i = 0; i < Model.listDateFuncion.Count(); i++)
-                    {
-                        <div>
-                            @Html.HiddenFor(c => c.listIdFuncion[i])
-                            @Html.CheckBoxFor(c => c.seCancela[i])
-                            @Html.DisplayFor(c => c.listDateFuncion[i])
-                        </div>
-                         
-                    }
+        @if (Model.listDateFuncion.Count() > 0)
+        {
+
+            <div class="row form-group">
+
+                <label for="fecha" class="control-label col-md-3 col-md-offset-3">Fecha - hora:</label>
+                <div class="col-md-3 ">
+                    <div id="fechaHora" style="border-radius:10px ;border:1px solid #ccc; height: 80px; overflow-y: scroll; padding:0px 10px ">
+                        @for (int i = 0; i < Model.listDateFuncion.Count(); i++)
+                        {
+                            <div>
+                                @Html.HiddenFor(c => c.listIdFuncion[i])
+                                @Html.CheckBoxFor(c => c.seCancela[i])
+                                @Html.DisplayFor(c => c.listDateFuncion[i])
+                            </div>
+
+                        }
+
+                    </div>
 
                 </div>
-
+                @Html.ValidationMessageFor(model => model.organizador)
             </div>
-        </div>
 
-        <div class="row form-group">
-            <label for="fecha" class="control-label col-md-3 col-md-offset-3">Fecha inicial de devolución:</label>
-            <div class="col-md-3">
-                @Html.TextBoxFor(c => c.fechaRecojo, new { @class = "form-control", type = "date" })
-            </div>
-            @Html.ValidationMessageFor(model => model.fechaRecojo)
-        </div>
-        <div class="row form-group">
-            <label for="dias" class="control-label col-md-3 col-md-offset-3">Cantidad de días en los que estará disponible la devolución:</label>
-            <div class="col-md-3">
-                <div class="input-group">
-                    @Html.TextBoxFor(c => c.diasRecojo, new { type = "number", @class = "form-control" })
-                    <span class="input-group-addon">días</span>
-                    
+            <div class="row form-group">
+                <label for="fecha" class="control-label col-md-3 col-md-offset-3">Fecha inicial de devolución:</label>
+                <div class="col-md-3">
+                    @Html.TextBoxFor(c => c.fechaRecojo, new { @class = "form-control", type = "date" })
                 </div>
-                @Html.ValidationMessageFor(model => model.diasRecojo)
+                @Html.ValidationMessageFor(model => model.fechaRecojo)
             </div>
-        </div>
-        <div class="row form-group">
-            <label for="dias" class="control-label col-md-3 col-md-offset-3">Motivo por el cual se cancela el evento(máx 200 carac.)</label>
-            <div class="col-md-3">
-                @Html.TextBoxFor(c => c.motivo, new { @class = "form-control", rows = "4" })
-            </div>    
-            @Html.ValidationMessageFor(model => model.motivo)   
-        </div>
-        
+            <div class="row form-group">
+                <label for="dias" class="control-label col-md-3 col-md-offset-3">Cantidad de días en los que estará disponible la devolución:</label>
+                <div class="col-md-3">
+                    <div class="input-group">
+                        @Html.TextBoxFor(c => c.diasRecojo, new { type = "number", @class = "form-control" })
+                        <span class="input-group-addon">días</span>
+
+                    </div>
+                    @Html.ValidationMessageFor(model => model.diasRecojo)
+                </div>
+            </div>
+            <div class="row form-group">
+                <label for="dias" class="control-label col-md-3 col-md-offset-3">Motivo por el cual se cancela el evento(máx 200 carac.)</label>
+                <div class="col-md-3">
+                    @Html.TextBoxFor(c => c.motivo, new { @class = "form-control", rows = "4" })
+                </div>
+                @Html.ValidationMessageFor(model => model.motivo)
+            </div>
+        }
+        else
+        {
+            <br />
+            <div>
+
+                <h3><center>No hay funciones por cancelar</center></h3>
+
+            </div>
+            <br />
+        }
         <div style="text-align: center">
-            <button type="submit" class="btn btn-primary"> Registrar Cancelación  <span class="glyphicon glyphicon-ok-sign"></span></button>
-            <a href="@Url.Action("Index","Evento")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
+            @if (Model.listDateFuncion.Count() > 0)
+            {
+    <button type="submit" class="btn btn-primary" onclick="return confirm('¿Está seguro que desea cancelar estas funciones?')"> Registrar Cancelación  <span class="glyphicon glyphicon-ok-sign"></span></button>
+            }
+            <a href="@Url.Action("Index", "Evento")" class="btn btn-danger">Salir <span class="glyphicon glyphicon-log-out"></span> </a>
         </div>
     </div>
 
 
 
 }
-
-
-
-
-
-
-
-
-
-
-
