busqueda eventos correcion prueba v3

--- a/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
@@ -355,7 +355,7 @@
 
         if (ViewBag.fech_fin != null)
         {
-            fechaF = ViewBag.fech_ini.ToString("yyyy-MM-dd");
+            fechaF = ViewBag.fech_fin.ToString("yyyy-MM-dd");
 
 
         }
