--- a/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
+++ b/WebApplication4/WebApplication4/Views/Account/RegisterClient.cshtml
@@ -8,174 +8,174 @@
 <div class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
-            <li>@Html.ActionLink("Inicio", "Index", "Home")
+            <li>@Html.ActionLink("Inicio","Index","Home")</li>
             <li class="active">Registrarse</li>
         </ol>
     </div>
 </div>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="container">
         <div class="col-md-8">
-        @Html.ValidationSummary(true)
-        <h3>Datos de Ingreso</h3><br>  
-        <div class="row form-group" >
-            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-3" })
-            <label class="control-label col-md-1">*</label>
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email)
-            </div>
-            
-        </div>
+            @Html.ValidationSummary(true)
+            <h3>Datos de Ingreso</h3><br>
+            <div class="row form-group">
+                @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Email)
+                </div>
 
-        <div class="row form-group">
-            @Html.LabelFor(model => model.Password, new { @class = "control-label col-md-3" })
-            <label class="control-label col-md-1">*</label>
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password)
-            </div>
-        </div>
-
-        <div class="row form-group">
-            @Html.LabelFor(model => model.ConfirmPassword, new { @class = "control-label col-md-3" })
-            <label class="control-label col-md-1">*</label>
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ConfirmPassword)
-            </div>
-        </div>
-
-
-        <br/>
-        <h3>Datos Personales</h3><br> 
-
-
-
-
-        <div class="row form-group">
-            @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-3" })
-            <label class="control-label col-md-1">*</label>
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.nombre)
-            </div>
-        </div>
-
-        <div class="row form-group">
-            @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-3" })
-            <label class="control-label col-md-1">*</label>
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.apellido, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.apellido)
-            </div>
-        </div>
-
-
-
-        <div class="row form-group">
-            @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-3" })
-            <label class="control-label col-md-1">*</label>
-            <div class="col-md-3">
-                @{
-                List<SelectListItem> listItems = new List<SelectListItem>();
-                listItems.Add(new SelectListItem
-                {
-                    Text = "DNI",
-                    Value = "1",
-                });
-                listItems.Add(new SelectListItem
-                {
-                    Text = "Pasaporte",
-                    Value = "2"
-                });
-                }
-                @Html.DropDownListFor(model => model.tipoDoc, listItems, "Seleccione tipo de documento", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.tipoDoc)
             </div>
 
-            @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-1" })
-            <div class="col-md-3">
-                @Html.EditorFor(model => model.codDoc, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.codDoc)
+            <div class="row form-group">
+                @Html.LabelFor(model => model.Password, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Password)
+                </div>
             </div>
-        </div>
 
-        <div class="row form-group">
-            @Html.LabelFor(model => model.sexo, new { @class = "control-label col-md-3" })
-            <label class="control-label col-md-1">*</label>
-            <div class="col-md-7">
+            <div class="row form-group">
+                @Html.LabelFor(model => model.ConfirmPassword, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ConfirmPassword)
+                </div>
+            </div>
+
+
+            <br />
+            <h3>Datos Personales</h3><br>
+
+
+
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.nombre, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.nombre)
+                </div>
+            </div>
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.apellido, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.apellido, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.apellido)
+                </div>
+            </div>
+
+
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.tipoDoc, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-3">
                     @{
-                List<SelectListItem> listItemsS = new List<SelectListItem>();
-                listItemsS.Add(new SelectListItem
-                {
-                    Text = "Masculino",
-                    Value = "H",
-                });
-                listItemsS.Add(new SelectListItem
-                {
-                    Text = "Femenino",
-                    Value = "F"
-                });
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem
+    {
+        Text = "DNI",
+        Value = "1",
+    });
+    listItems.Add(new SelectListItem
+    {
+        Text = "Pasaporte",
+        Value = "2"
+    });
                     }
-             @Html.DropDownListFor(model => model.sexo, listItemsS, "Seleccione", new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.sexo)
+                    @Html.DropDownListFor(model => model.tipoDoc, listItems, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.tipoDoc)
+                </div>
+
+                @Html.LabelFor(model => model.codDoc, new { @class = "control-label col-md-1" })
+                <div class="col-md-3">
+                    @Html.EditorFor(model => model.codDoc, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.codDoc)
+                </div>
             </div>
-        </div>
 
-        <div class="row form-group">
-            @Html.LabelFor(model => model.fechaNac, new { @class = "control-label col-md-3" })
-            <label class="control-label col-md-1">*</label>
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.fechaNac)
+            <div class="row form-group">
+                @Html.LabelFor(model => model.sexo, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @{
+    List<SelectListItem> listItemsS = new List<SelectListItem>();
+    listItemsS.Add(new SelectListItem
+    {
+        Text = "Masculino",
+        Value = "H",
+    });
+    listItemsS.Add(new SelectListItem
+    {
+        Text = "Femenino",
+        Value = "F"
+    });
+                    }
+                    @Html.DropDownListFor(model => model.sexo, listItemsS, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.sexo)
+                </div>
             </div>
-        </div>
 
-        <h3>Ubicación</h3><br>
-
-        <div class="row form-group">
-            @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-4" })
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.direccion)
+            <div class="row form-group">
+                @Html.LabelFor(model => model.fechaNac, new { @class = "control-label col-md-3" })
+                <label class="control-label col-md-1">*</label>
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.fechaNac, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.fechaNac)
+                </div>
             </div>
-        </div>
 
-        <div class="row form-group">
-            @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-4" })
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.telefono)
+            <h3>Ubicación</h3><br>
+
+            <div class="row form-group">
+                @Html.LabelFor(model => model.direccion, new { @class = "control-label col-md-4" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.direccion, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.direccion)
+                </div>
             </div>
-        </div>
 
-        <div class="row form-group">
-            @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-4" })
-            <div class="col-md-7">
-                @Html.EditorFor(model => model.telMovil, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.telMovil)
+            <div class="row form-group">
+                @Html.LabelFor(model => model.telefono, new { @class = "control-label col-md-4" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.telefono, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.telefono)
+                </div>
             </div>
-        </div>
 
-        
+            <div class="row form-group">
+                @Html.LabelFor(model => model.telMovil, new { @class = "control-label col-md-4" })
+                <div class="col-md-7">
+                    @Html.EditorFor(model => model.telMovil, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.telMovil)
+                </div>
+            </div>
 
-        <div class="row form-group">
-            <div class="col-md-offset-4 col-md-6">
-                <button type="submit"  class="btn btn-primary" >
-                    Registrarme 
-                <span class="glyphicon glyphicon-pencil"></span>
-                </button>
-                <a href="/Home/Index" class="btn btn-danger"> Salir <span class="glyphicon glyphicon-log-out"></span></a>
+
+
+            <div class="row form-group">
+                <div class="col-md-offset-4 col-md-6">
+                    <button type="submit" class="btn btn-primary">
+                        Registrarme
+                        <span class="glyphicon glyphicon-pencil"></span>
+                    </button>
+                    <a href="@Url.Action("Index","Home")" class="btn btn-danger"> Salir <span class="glyphicon glyphicon-log-out"></span></a>
+                </div>
             </div>
         </div>
     </div>
-    </div>
-    
+
 }
 
 
