--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MiCuenta.cshtml
@@ -1,67 +1,7 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "MiCuenta";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-
-<div id="busqAvanzada" class="collapse container">
-    <!--formulario EN LINEA-->
-    <form id="search" action="" class="form-inline">
-        <div class="form-group ">
-            <div class="form-group ">
-                <div class="input-group">
-                    <span class="input-group-addon">Desde:</span>
-                    <input type="date" class="form-control">
-                </div>
-            </div>
-
-            <div class="form-group ">
-                <div class="input-group">
-                    <span class="input-group-addon">Hasta:</span>
-                    <input type="date" class="form-control">
-                </div>
-            </div>
-
-
-            <div class="form-group ">
-                <select name="" id="Tipo" class="form-control col-lg-2">
-                    <option value="">Evento</option>
-                    <option value="">Teatro</option>
-                    <option value="">Actividad</option>
-                    <option value="">Cine</option>
-                </select>
-            </div>
-            <div class="form-group ">
-                <select name="" id="Categoria" class="form-control col-lg-2">
-                    <option value="">Entretenimiento</option>
-                    <option value="">Comedia</option>
-                    <option value="">Deporte</option>
-                    <option value="">Salud</option>
-                    <option value="">Música</option>
-                    <option value="">Romance</option>
-                </select>
-            </div>
-
-
-            <div class="form-group">
-                <select name="" id="lugares" class="form-control ">
-                    <option value="">Lima</option>
-                    <option value="">Piura</option>
-                    <option value="">Juliaca</option>
-                    <option value="">Trujillo</option>
-                    <option value="">Loreto</option>
-                    <option value="">Ica</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <a href="index1.html" class="btn btn-primary ">Buscar <span class="glyphicon glyphicon-search"></span></a>
-            </div>
-
-        </div>
-    </form>
-</div>
-    </header>
 <div class="container-fluid">
     <ol class="breadcrumb">
         <li><a href="@Url.Action("Index", "Home")">Inicio</a></li>
@@ -73,7 +13,7 @@
         <div class="col-md-8">
             <form action="" class="form-horizontal ">
                 <ol id="pref" class="navbar " style="font-size:20px;">
-                    <li><a href="modificar_Datos.html">Actualizar mi datos/preferencias </a>
+                    <li><a href="@Url.Action("ModificarDatos","CuentaUsuario")">Actualizar mis datos</a>
                     <li><a href="cambiar_correo.html">Cambiar mi dirección de correo electrónico</a>
                     <li><a href="cambiar_contrasena.html">Cambiar mi contraseña</a>
                     <li><a href="@Url.Action("MisReservas", "CuentaUsuario")">Ver mis reservas</a>
