CAMBIOS VER EVENTO

--- a/WebApplication4/WebApplication4/Views/Evento/Asientos.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Asientos.cshtml
@@ -431,6 +431,10 @@
                     $("#columnas").val(cantColumnas);
                 }
                 else {
+                    if (index >= 0) {
+                        //Se desabilita la cantidad de asientos y se setea en 0
+                    }
+
                     $("#canvas").empty();
                     $("#filas").val("");
                     $("#columnas").val("");
