--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -135,9 +135,11 @@
                                 <div class="row form-group">
                                     <label for="hora" class="control-label col-md-4">Hora:</label>
                                     <div id="funcion" class="col-md-8">
-                                        <select id="hora" class="form-control ">
-                                            <option value="">Seleccione</option>
-                                            <option value="">4:00 pm</option>
+                                        <select id="funcionHora" class="form-control">
+                                            @for (int i = 0; i < ViewBag.ListFunciones.Count; i++)
+                                            {
+                                                <option value="@ViewBag.ListFunciones[i].codFuncion"> @(  ((DateTime)ViewBag.ListFunciones[i].horaIni) )</option>
+                                            }
                                         </select>
                                     </div>
                                 </div>
@@ -332,30 +334,29 @@
 
 
 
-        $("#zonas").change(function () {
+        $("#zonaTarifa,#funcionHora").change(function () {
             //cambia el aforo cuando se cambia la zona
-            var indice = $("#zonas").val();
-            $("#aforos #" + indice).prop('selected', true);
-            $("#asignados #" + indice).prop('selected', true);
+            var indiceZT = $("#zonaTarifa").val();
+            var indiceFH = $("#funcionHora").val();
 
             //Aca iria el seteo de las filas y columnas
             var index = -1;
 
-            for (var i = 0; i < listaAsientos.length; i++) {
-                if (listaAsientos[i].index == indice) index = i;
+            for (var i = 0; i < listaAsientos.length ; i++) {
+                if (listaAsientos[i].idZonaEvento == indiceZT && listaAsientos[i].idFuncionHora == indiceFH) index = i;
             }
 
             if (index >= 0 && listaAsientos[index].tieneAsientos) {
                 sacar(listaAsientos[index].posFila, listaAsientos[index].posColumna)
                 cantFilas = listaAsientos[index].filas;
                 cantColumnas = listaAsientos[index].columnas;
-                $("#filas").val(cantFilas);
-                $("#columnas").val(cantColumnas);
+                //$("#filas").val(cantFilas);
+                //$("#columnas").val(cantColumnas);
             }
             else {
                 $("#canvas").empty();
-                $("#filas").val("");
-                $("#columnas").val("");
+                //$("#filas").val("");
+                //$("#columnas").val("");
             }
         });
 
